syntax = "proto3";

option go_package = "github.com/seppo0010/bocker";

package protocol;

service Bocker {
  rpc Build(BuildRequest) returns (stream ExecReply) {}
  rpc Run(RunRequest) returns (stream ExecReply) {}
}

message BuildRequest {
  string cwdPath = 1;
  string filePath = 2;
  string tag = 3;
}

message RunRequest {
  string tag = 1;
}

message ExecReply {
  bytes stdout = 1;
  bytes stderr = 2;
  uint32 exitCode = 3;
}
